--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="C:\Users\Parkash Suthar\Desktop\suthar ALMANI\images.jpg" alt="Books Illustration">
+        <img src="images.jpg" alt="Books Illustration">
       </div>
     </div>
   </section>
