--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BookVerse</title>
-  <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -19,14 +22,25 @@
       color: #fff;
       padding: 1rem 2rem;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 1.3rem;
+    }
+
+    .nav-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
     }
 
     .nav-links a {
       color: #fff;
       text-decoration: none;
-      margin: 0 1rem;
     }
 
     .cta-button {
@@ -35,6 +49,7 @@
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
+      margin-top: 0.5rem;
     }
 
     .hero {
@@ -55,7 +70,7 @@
 
     .hero-text {
       flex: 1;
-      min-width: 300px;
+      min-width: 280px;
     }
 
     .hero-text h1 {
@@ -80,7 +95,8 @@
     .hero-image {
       flex: 1;
       text-align: right;
-      min-width: 300px;
+      min-width: 280px;
+      margin-top: 1rem;
     }
 
     .hero-image img {
@@ -108,7 +124,7 @@
 
     .categories, .top-reads {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       gap: 1rem;
     }
 
@@ -125,6 +141,60 @@
       padding: 2rem;
       background: #121212;
       color: #fff;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .nav-links {
+        margin-top: 1rem;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      .cta-button {
+        align-self: flex-start;
+      }
+
+      .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 2rem 1rem;
+      }
+
+      .hero-content {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .hero-text h1 {
+        font-size: 2rem;
+      }
+
+      .hero-text p {
+        font-size: 1rem;
+      }
+
+      .hero-buttons {
+        margin-top: 1rem;
+      }
+
+      .hero-image {
+        text-align: center;
+      }
+
+      .hero-image img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      section {
+        padding: 2rem 1rem;
+      }
     }
   </style>
 </head>
@@ -150,7 +220,7 @@
         <h1>Read Anywhere, Anytime 📖</h1>
         <p>Access thousands of books across genres. Download and read offline in one click.</p>
         <div class="hero-buttons">
-          <a href="Readingbooks.html" class="btn primary">📚 Start Reading</a>
+          <a href="Readingbooks.html" class="btn">📚 Start Reading</a>
         </div>
       </div>
       <div class="hero-image">
@@ -197,9 +267,9 @@
     <h2>📞 Contact Us</h2>
     <p>
       Got questions or suggestions? We'd love to hear from you! <br />
-      📧 Email: support@bookverse.com <br />
-      📍 Address: 123 Reading Lane, Knowledge City, PK <br />
-      📱 Phone: +92 123 4567890
+      📧 Email:  kinghssuthar@gmail.com <br />
+      📍 Address: Suthar Colony Mithi, Sindh, Pk <br />
+      📱 Phone: +92 315 2845770
     </p>
   </section>
 
